		fetching results of stored procedure
	renamed interbase.create.sh to firebird.create.sh
	fixed a bug that could overrun the postgresql bind array
	fixed bug that caused connection daemon sockets to be double-freed on
		shutdown after a suspended session
	precision/scale in output bind buffers is initialized now
	debugstring buffers are no longer build when debug is turned off
	fixed id vs. index bug when requesting a cursor
	refactored JNI code a bit, fixed getIntField/getLongField problem that
		caused problems on 64-bit machines
	applied patch to make python api return decimals and integers, not
		just strings, refactored some of it
	fixed dump tran docs in getting started with sybase to use sa
	updated sybase connection to use length of cursor name rather than
		CS_NULLTERM to work around an odd, inconsistent bug that would
		cause the connection to hang sometimes
	connections not spawned by scaler don't signal on the semaphore used
		by the scaler to wait for a connection to start now
	updated bind var docs
	updated faq

0.41 - added configure test for ruby.h
	added a couple of new functions to the mysql drop-in library
	updated mysql drop-in lib docs explaining how to use with PHP
	added documentation for timequeries params
	if SQLConnectW isn't supported, ODBC driver uses non-unicode calls
	added maxsessioncount parameter and connections use it to override
		ttl and bleed off
	applied Renat Sabitov's output bind patch
	added mysql last_insert_id() note to FAQ
	made it so oracle_home doesn't need to be set if oracle_sid is
		specified in tnsnames.ora format

0.40 - fixed readline detection in configure script
	fixed an uninitialized variable in sqlr-import
	changed clientSession() to call endSessionCommand()
		instead of endSession() so endSessionInternal() would be called
		every time
	fixed debug option in sqlr-import and sqlr-export
	fixed postgresql typemangling=no option
	set dbversion to unknown if sp_version wasn't found in freetds/sybase